i18n https://www.pivotaltracker.com/story/show/61690428

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
     "app.external.facebook": "Facebook",
 
     "splash": "Splash",
-    "splash.headline": "Experience Beyond Media",
+    "splash.headline": "Experiences Beyond Media",
     "splash.title": "Outright Mental™",
 
     "end": "end"
