Español https://www.pivotaltracker.com/story/show/61693158

--- a/locales/es.json
+++ b/locales/es.json
@@ -6,7 +6,7 @@
     "app.login.forgot-password-q": "¿Contraseña perdido?",
     "app.login.or-use-externals": "o Iniciar Sesión con...",
     "app.login.dont-have-create.a": "¿No tiene una cuenta? Por favor ",
-    "app.login.dont-have-create.b": "para crear lo.",
+    "app.login.dont-have-create.b": "para crear uno.",
     "app.signup": "Registrarse",
     "app.signup.sign-up-here": "Registrarse Aqui",
     "app.external.twitter": "Twitter",
