--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
     "app.external.facebook": "Facebook",
 
     "splash": "Splash",
-    "splash.headline": "Experiences Beyond Media",
+    "splash.headline": "100% original experiences across media, apps and live events to open your mind and evoke humanity!",
     "splash.title": "Outright Mental™",
 
     "end": "end"
