--- a/locales/es.json
+++ b/locales/es.json
@@ -13,8 +13,8 @@
     "app.external.facebook": "Facebook",
 
     "splash": "Mancha",
-    "splash.headline": "Experiencias Mas Allá de Medios",
-    "splash.title": "Total Mental™",
+    "splash.headline": "100% original experiences across media, apps and live events to open your mind and evoke humanity!",
+    "splash.title": "Outright Mental™",
 
     "end": "end"
 }
