P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
     "app.external.facebook": "Facebook",
 
     "splash": "Splash",
-    "splash.headline": "100% original experiences across media, apps and live events to open your mind and evoke humanity!",
+    "splash.headline": "Outright Mental Inc. opens your mind with 100% original experiences beyond media.",
     "splash.title": "Outright Mental™",
 
     "end": "end"
