Español https://www.pivotaltracker.com/story/show/61693158

--- a/locales/es.json
+++ b/locales/es.json
@@ -13,7 +13,7 @@
     "app.external.facebook": "Facebook",
 
     "splash": "Mancha",
-    "splash.headline": "Outright Mental Inc. opens your mind with 100% original experiences beyond media.",
+    "splash.headline": "Outright Mental Inc. abre su mente con experiencias originales 100% más allá de medios.",
     "splash.title": "Outright Mental™",
 
     "end": "end"
