--- a/locales/es.json
+++ b/locales/es.json
@@ -24,9 +24,7 @@
     "app.nav.account": "Cuenta",
     "app.nav.account.settings": "Ajustes",
     "splash": "Mancha",
-    "splash.headline": "Outright Mental Inc. abre su mente con experiencias originales 100% más allá de medios.",
+    "splash.headline": "En un mundo donde nosotros connectividad digital puede abandonarnos fisicamente aislado, Outright Mental Inc. aprovecha tecnología emergente y contenido original para volver a conectar a los miembros a la maravilla completo del mundo que les rodea.",
     "splash.title": "Outright Mental™",
-
-
     "end": "end"
 }
