P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,7 +24,7 @@
     "app.nav.account": "Account",
     "app.nav.account.settings": "Settings",
     "splash": "Splash",
-    "splash.headline": "In a world where our digital connectedness can leave us physically isolated, Outright Mental leverages emerging technologies and original content to reconnect members to the full wonder of the world around them.",
+    "splash.headline": "Where our digital connectedness can leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect members to the full wonder of the world around us.",
     "splash.title": "Outright Mental™",
     "end": "end"
 }
