--- a/locales/es.json
+++ b/locales/es.json
@@ -24,7 +24,7 @@
     "app.nav.account": "Cuenta",
     "app.nav.account.settings": "Ajustes",
     "splash": "Mancha",
-    "splash.headline": "En un mundo donde nosotros connectividad digital puede abandonarnos fisicamente aislado, Outright Mental Inc. aprovecha tecnología emergente y contenido original para volver a conectar a los miembros a la maravilla completo del mundo que les rodea.",
+    "splash.headline": "Donde conectividad digital puede abandonar nos fisicamente aislado, Outright Mental Inc. aprovechamos contenido original y tecnología emergente para volver a conectar a los miembros a la maravilla completo del mundo que nos rodea.",
     "splash.title": "Outright Mental™",
     "end": "end"
 }
