--- a/locales/en.json
+++ b/locales/en.json
@@ -26,5 +26,7 @@
     "splash": "Splash",
     "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect members to the full wonder of the world around us.",
     "splash.title": "Outright Mental™",
+    "account.title": "My Outright Mental™ Account",
+    "account.subtext":"We'll be in touch",
     "end": "end"
 }
