P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,7 +24,7 @@
     "app.nav.account": "Account",
     "app.nav.account.settings": "Settings",
     "splash": "Splash",
-    "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect members to the full wonder of the world around us.",
+    "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect with the wonder of the world around us.",
     "splash.title": "Outright Mental™",
     "account.title": "My Outright Mental™ Account",
     "account.subtext":"We'll be in touch",
