Bower https://www.pivotaltracker.com/story/show/60912184

--- a/locales/en.json
+++ b/locales/en.json
@@ -27,6 +27,6 @@
     "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect with the wonder of the world around us.",
     "splash.title": "Outright Mental™",
     "account.title": "My Outright Mental™ Account",
-    "account.subtext":"We'll be in touch",
+    "account.subtext":"to the premiere of DOCTOR WURTZ™",
     "end": "end"
 }
