P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/locales/en.json
+++ b/locales/en.json
@@ -27,6 +27,8 @@
     "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect with the wonder of the world around us.",
     "splash.title": "Outright Mental™",
     "account.title": "My Outright Mental™ Account",
-    "account.subtext":"to the premiere of DOCTOR WURTZ™",
+    "account.headline-pre":"Our next public release, DOCTOR WURTZ™ premieres",
+    "account.headline-post":".",
+    "account.subtext":"We'll be in touch!",
     "end": "end"
 }
