Español https://www.pivotaltracker.com/story/show/61693158

--- a/locales/es.json
+++ b/locales/es.json
@@ -26,5 +26,9 @@
     "splash": "Mancha",
     "splash.headline": "Mientras que conectividad digital puede abandonarnos fisicamente aislado, Outright Mental Inc. aprovechamos contenido original y tecnología emergente para volver a conectar a la maravilla del mundo que nos rodea.",
     "splash.title": "Outright Mental™",
+    "account.title": "Mi Cuenta de Outright Mental™",
+    "account.headline-pre":"Nosotros próximo lanzamiento público, DOCTOR WURTZ™ estreno",
+    "account.headline-post":".",
+    "account.subtext":"¡Estaremos en contacto!",
     "end": "end"
 }
