--- a/locales/en.json
+++ b/locales/en.json
@@ -24,7 +24,7 @@
     "app.nav.account": "Account",
     "app.nav.account.settings": "Settings",
     "splash": "Splash",
-    "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect with the wonder of the world around us.",
+    "splash.headline": "While our digital connectedness may leave us physically isolated, Outright Mental leverages original content and emerging technologies to reconnect us to the wonder of the world all around.",
     "splash.title": "Outright Mental™",
     "account.title": "My Outright Mental™ Account",
     "account.next.pre": "Our first epic,",
