P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/locales/es.json
+++ b/locales/es.json
@@ -24,7 +24,7 @@
     "app.nav.account": "Cuenta",
     "app.nav.account.settings": "Ajustes",
     "splash": "Mancha",
-    "splash.headline": "Mientras que conectividad digital puede abandonarnos fisicamente aislado, Outright Mental Inc. aprovechamos contenido original y tecnología emergente para volver a conectar a la maravilla del mundo que nos rodea.",
+    "splash.headline": "Mientras que conectividad digital puede abandonarnos fisicamente aislado, Outright Mental Inc. aprovechamos contenido original y tecnología emergente para volver a conectar a la maravilla de nuestro mundo.",
     "splash.title": "Outright Mental™",
     "account.title": "Mi Cuenta de Outright Mental™",
     "account.next.pre": "Nuestro épica primera,",
